# balif

./: .gitignore  API.ipynb  Experiments.ipynb  Laplace.ipynb  README.md  ap_plots.ipynb  bad.py  balif.py  balif_batchbald.py  batch_bald.py  batchtests.py  datasets.py  exactbald_batchbald.py  forest_base.py  forests.py  forests_numba.py  iforest.py  interests.ipynb  isolation_forest.py  pad copy.ipynb  pad.ipynb  plots.ipynb  pyproject.toml  run_batchquery.py  run_bbald.py  simodds.ipynb  sweep.bash  time.ipynb  utils.py
.old_misc/: Experiments.ipynb  Visualizations.ipynb  active_forests.py  considerations on ensamble prediction.ipynb  examples st copy.ipynb  examples st.ipynb  examples wine.ipynb  path_score.py  path_score_2.py  updatable_forests.py
artificial_pancreas/: vis.ipynb
balif/: __init__.py  active_learning.py  bad.py  iforest.py
batch_query/: plot_ap.py  plot_interest.py  run_sims.py  time.ipynb
datasets/: __init__.py
experiments/: plotting.py  run_simulations.ipynb  simulations.ipynb  testing_alif.ipynb  utils.py  visualization.ipynb
jax/: activelearning.py  balif.py  file.html  isolation_forest.py  isolation_tree.py  real data experiments copy.ipynb  real data experiments.ipynb  real data vis.ipynb  sim cheating margin query.ipynb  sim margin query.ipynb  sim randomquery.ipynb  synthetic experiments copy.ipynb  synthetic experiments.ipynb  test balif .ipynb  test balif.ipynb  test iforest.ipynb  test pathscore.ipynb  test randomquery.ipynb  test tree.ipynb  tests isolation forest.ipynb  tests isolation trees.ipynb  tests.ipynb  trees.py
(+942 files in other folders)
