[project]
name = "balif"
version = "0.1.0"
description = "Bayesian Active Learning Isolation Forest"
authors = [
    {name = "davidesartor", email = "davide.sartor.4@studenti.unipd.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jaxtyping>=0.3.1",
    "pyod>=2.0.4",
]

[tool.setuptools]
packages = {find = {include = ["balif", "odds_datasets"]}}
